--- a/saturnpy/exchangeConfig.json
+++ b/saturnpy/exchangeConfig.json
@@ -1,6 +1,6 @@
 {
   "address": {
-    "ETC": "0x3ec00ee8a4fbe81e7eea328029ce490654e8e11a",
+    "ETC": "0x5EF83Ab1155786f146c5A00722bEF7aB683Dc0DE",
     "ETH": "0x13f64609bf1ef46f6515f8cd3115433a93a00dc6"
   },
   "abi": [
@@ -55,6 +55,223 @@
   		"type": "function"
   	},
   	{
+  		"constant": false,
+  		"inputs": [
+  			{
+  				"name": "newMul",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "newDiv",
+  				"type": "uint256"
+  			}
+  		],
+  		"name": "changeTradeMiningPrice",
+  		"outputs": [],
+  		"payable": false,
+  		"stateMutability": "nonpayable",
+  		"type": "function"
+  	},
+  	{
+  		"constant": false,
+  		"inputs": [
+  			{
+  				"name": "sellToken",
+  				"type": "address"
+  			},
+  			{
+  				"name": "buyToken",
+  				"type": "address"
+  			},
+  			{
+  				"name": "amount",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "priceMul",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "priceDiv",
+  				"type": "uint256"
+  			}
+  		],
+  		"name": "sellERC20Token",
+  		"outputs": [
+  			{
+  				"name": "orderId",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": false,
+  		"stateMutability": "nonpayable",
+  		"type": "function"
+  	},
+  	{
+  		"constant": false,
+  		"inputs": [
+  			{
+  				"name": "sellToken",
+  				"type": "address"
+  			},
+  			{
+  				"name": "buyToken",
+  				"type": "address"
+  			},
+  			{
+  				"name": "amount",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "priceMul",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "priceDiv",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "ring",
+  				"type": "address"
+  			}
+  		],
+  		"name": "sellERC20TokenWithRing",
+  		"outputs": [
+  			{
+  				"name": "orderId",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": false,
+  		"stateMutability": "nonpayable",
+  		"type": "function"
+  	},
+  	{
+  		"constant": false,
+  		"inputs": [
+  			{
+  				"name": "buyToken",
+  				"type": "address"
+  			},
+  			{
+  				"name": "priceMul",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "priceDiv",
+  				"type": "uint256"
+  			}
+  		],
+  		"name": "sellEther",
+  		"outputs": [
+  			{
+  				"name": "orderId",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": true,
+  		"stateMutability": "payable",
+  		"type": "function"
+  	},
+  	{
+  		"constant": false,
+  		"inputs": [
+  			{
+  				"name": "buyToken",
+  				"type": "address"
+  			},
+  			{
+  				"name": "priceMul",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "priceDiv",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "ring",
+  				"type": "address"
+  			}
+  		],
+  		"name": "sellEtherWithRing",
+  		"outputs": [
+  			{
+  				"name": "orderId",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": true,
+  		"stateMutability": "payable",
+  		"type": "function"
+  	},
+  	{
+  		"constant": false,
+  		"inputs": [
+  			{
+  				"name": "from",
+  				"type": "address"
+  			},
+  			{
+  				"name": "value",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "data",
+  				"type": "bytes"
+  			}
+  		],
+  		"name": "tokenFallback",
+  		"outputs": [],
+  		"payable": false,
+  		"stateMutability": "nonpayable",
+  		"type": "function"
+  	},
+  	{
+  		"constant": false,
+  		"inputs": [],
+  		"name": "withdrawTradeMining",
+  		"outputs": [],
+  		"payable": false,
+  		"stateMutability": "nonpayable",
+  		"type": "function"
+  	},
+  	{
+  		"inputs": [
+  			{
+  				"name": "_saturnToken",
+  				"type": "address"
+  			},
+  			{
+  				"name": "_treasury",
+  				"type": "address"
+  			},
+  			{
+  				"name": "_feeMul",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "_feeDiv",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "_tradeMiningMul",
+  				"type": "uint256"
+  			},
+  			{
+  				"name": "_tradeMiningDiv",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": false,
+  		"stateMutability": "nonpayable",
+  		"type": "constructor"
+  	},
+  	{
+  		"payable": true,
+  		"stateMutability": "payable",
+  		"type": "fallback"
+  	},
+  	{
   		"anonymous": false,
   		"inputs": [
   			{
@@ -75,6 +292,11 @@
   			{
   				"indexed": false,
   				"name": "buyToken",
+  				"type": "address"
+  			},
+  			{
+  				"indexed": false,
+  				"name": "ring",
   				"type": "address"
   			},
   			{
@@ -136,68 +358,6 @@
   		"type": "event"
   	},
   	{
-  		"constant": false,
-  		"inputs": [
-  			{
-  				"name": "sellToken",
-  				"type": "address"
-  			},
-  			{
-  				"name": "buyToken",
-  				"type": "address"
-  			},
-  			{
-  				"name": "amount",
-  				"type": "uint256"
-  			},
-  			{
-  				"name": "priceMul",
-  				"type": "uint256"
-  			},
-  			{
-  				"name": "priceDiv",
-  				"type": "uint256"
-  			}
-  		],
-  		"name": "sellERC20Token",
-  		"outputs": [
-  			{
-  				"name": "orderId",
-  				"type": "uint256"
-  			}
-  		],
-  		"payable": false,
-  		"stateMutability": "nonpayable",
-  		"type": "function"
-  	},
-  	{
-  		"constant": false,
-  		"inputs": [
-  			{
-  				"name": "buyToken",
-  				"type": "address"
-  			},
-  			{
-  				"name": "priceMul",
-  				"type": "uint256"
-  			},
-  			{
-  				"name": "priceDiv",
-  				"type": "uint256"
-  			}
-  		],
-  		"name": "sellEther",
-  		"outputs": [
-  			{
-  				"name": "orderId",
-  				"type": "uint256"
-  			}
-  		],
-  		"payable": true,
-  		"stateMutability": "payable",
-  		"type": "function"
-  	},
-  	{
   		"anonymous": false,
   		"inputs": [
   			{
@@ -223,6 +383,11 @@
   			{
   				"indexed": false,
   				"name": "boughtTokens",
+  				"type": "uint256"
+  			},
+  			{
+  				"indexed": false,
+  				"name": "feePaid",
   				"type": "uint256"
   			},
   			{
@@ -257,11 +422,6 @@
   		"type": "event"
   	},
   	{
-  		"payable": true,
-  		"stateMutability": "payable",
-  		"type": "fallback"
-  	},
-  	{
   		"constant": true,
   		"inputs": [
   			{
@@ -277,6 +437,34 @@
   		"outputs": [
   			{
   				"name": "fees",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": false,
+  		"stateMutability": "view",
+  		"type": "function"
+  	},
+  	{
+  		"constant": true,
+  		"inputs": [],
+  		"name": "feeDiv",
+  		"outputs": [
+  			{
+  				"name": "",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": false,
+  		"stateMutability": "view",
+  		"type": "function"
+  	},
+  	{
+  		"constant": true,
+  		"inputs": [],
+  		"name": "feeMul",
+  		"outputs": [
+  			{
+  				"name": "",
   				"type": "uint256"
   			}
   		],
@@ -399,6 +587,62 @@
   			{
   				"name": "",
   				"type": "uint256"
+  			}
+  		],
+  		"payable": false,
+  		"stateMutability": "view",
+  		"type": "function"
+  	},
+  	{
+  		"constant": true,
+  		"inputs": [],
+  		"name": "tradeMiningBalance",
+  		"outputs": [
+  			{
+  				"name": "",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": false,
+  		"stateMutability": "view",
+  		"type": "function"
+  	},
+  	{
+  		"constant": true,
+  		"inputs": [],
+  		"name": "tradeMiningDiv",
+  		"outputs": [
+  			{
+  				"name": "",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": false,
+  		"stateMutability": "view",
+  		"type": "function"
+  	},
+  	{
+  		"constant": true,
+  		"inputs": [],
+  		"name": "tradeMiningMul",
+  		"outputs": [
+  			{
+  				"name": "",
+  				"type": "uint256"
+  			}
+  		],
+  		"payable": false,
+  		"stateMutability": "view",
+  		"type": "function"
+  	},
+  	{
+  		"constant": true,
+  		"inputs": [],
+  		"name": "treasury",
+  		"outputs": [
+  			{
+  				"name": "",
+  				"type": "address"
   			}
   		],
   		"payable": false,
